istio/labs/add_vm_to_istio/with_helm_charts/app_deployment/3-v2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
  namespace: vm-workloads
  labels:
    workloadgroup: vm_app
    app: vm_app
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: vm_app
