istio/labs/add_vm_to_istio/with_helm_charts/app_deployment/4-destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: helloworld-dr
  namespace: istio-system
spec:
  host: "*"
  subsets:
    - name: v1
      labels:
        app: helloworld
        version: v1
    - name: v2
      labels:
        app: vm_app
