istio/labs/add_vm_to_istio/with_helm_charts/app_deployment/5-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gw
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: "helloworld-svc.learning.svc.cluster.local"
        port:
          number: 5000
        subset: v1
      weight: 50
    - destination:
        host: "helloworld-svc.vm-workloads.svc.cluster.local"
        port:
          number: 5000
        subset: v2
      weight: 50
